fix(_footerV2.scss) adding correct display on mobile - BOLT-25630

--- a/app/styles/v2/partials/components/footerV2/_footerV2.scss
+++ b/app/styles/v2/partials/components/footerV2/_footerV2.scss
@@ -203,6 +203,9 @@
 			}
 			.support-text {
 				margin-left: 10px;
+				&.mobile-only {
+					display: inline-block;
+				}
 			}
 		}
 	}
